--- a/RestaurantFeedback/index.html
+++ b/RestaurantFeedback/index.html
@@ -11,6 +11,23 @@ Revision History
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Restaurant Feedback</title>
+
+    <!--jQuery-->
+    <script src="js/lib/jquery-2.1.4.js"></script>
+    <!--jQuery mobile-->
+    <script src="js/lib/jquery.mobile-1.4.5.js"></script>
+    <!--JQuery Validate-->
+    <script src="js/lib/jquery.validate.js"></script>
+    <!--jQuery mobile css-->
+    <link rel="stylesheet" type="text/css" href="css/lib/jquery.mobile-1.4.5.css">
+    <link rel="stylesheet" type="text/css" href="css/DAmystyle.css">
+
+    <!--my scripts-->
+    <script src="js/DAdatabase.js"></script>
+    <script src="js/DAfeedbackDAL.js"></script>
+    <script src="js/DAutil.js"></script>
+    <script src="js/DAglobal.js"></script>
+    <script src="js/DAfacade.js"></script>
 </head>
 <body>
 
@@ -66,9 +83,7 @@ Revision History
             <input type="text" id="daAddBusinessName" name="daAddBusinessName">
             <label>Type:</label>
             <select  id="daAddBusinessType" name="daAddBusinessType">
-                <option value="other" selected>Other</option>
-                <option value="Asian">Asian</option>
-                <option value="Canadian">Canadian</option>
+
             </select>
             <label>Reviewer Email:</label>
             <input type="email" id="daAddReviewerEmail" name="daAddReviewerEmail">
@@ -115,20 +130,6 @@ Revision History
     </header>
     <section data-role="content">
         <ul id="daFeedbackList" data-role="listview" class="ui-listview-inset" data-icon="false">
-            <li>
-                <a href="#daEditFeedbackPage"><h1>Business Name: Tomatoes Restaurant</h1>
-                    <p>Reviewer Email: daiana@hotmail.com</p>
-                    <p>Comments: Best vegan food in Kitchener!</p>
-                    <p>Overall Rating: 95%</p>
-                </a>
-            </li>
-            <li>
-                <a href="#daEditFeedbackPage"><h1>Business Name: Pizza La Mama</h1>
-                    <p>Reviewer Email: gerald@hotmail.com</p>
-                    <p>Comments: Italian pizza with a good price!</p>
-                    <p>Overall Rating: 90%</p>
-                </a>
-            </li>
         </ul>
     </section>
     <footer data-role="footer" data-theme="b" data-position="fixed">
@@ -156,9 +157,10 @@ Revision History
             <input type="text" id="daEditBusinessName" name="daEditBusinessName">
             <label>Type:</label>
             <select  id="daEditBusinessType" name="daEditBusinessType">
-                <option value="other" selected>Other</option>
-                <option value="Asian">Asian</option>
                 <option value="Canadian">Canadian</option>
+                <option value="Asian">Asian</option>
+                <option value="Other" selected>Other</option>
+
             </select>
             <label>Reviewer Email:</label>
             <input type="email" id="daEditReviewerEmail" name="daEditReviewerEmail">
@@ -169,7 +171,7 @@ Revision History
 
             <fieldset data-role="controlgroup">
                 <input type="checkbox" id="daEditRatings" name="daEditRatings">
-                <label for="daEditRatings">Do you want to add your ratings?</label>
+                <label id="daLabelEditRatings" for="daEditRatings">Do you want to add your ratings?</label>
             </fieldset>
             <div id="daEditRating" hidden>
                 <label>Food Quality (0-5):</label>
@@ -211,8 +213,8 @@ Revision History
         <label>Default reviewer Email:</label>
         <input type="email" id="daSettingsEmail" name="daSettingsEmail">
 
-        <button id="daSettingsBtnSave" class="ui-btn-active">Save</button>
-        <button id="daSettingsBtnClear"  data-theme="b">Clear Database</button>
+        <button id="daSettingsBtnSave"  name="daSettingsBtnSave" class="ui-btn-active">Save</button>
+        <button id="daSettingsBtnClear" name="daSettingsBtnClear" data-theme="b">Clear Database</button>
 
     </section>
     <footer data-role="footer" data-theme="b" data-position="fixed">
@@ -222,18 +224,3 @@ Revision History
 </body>
 </html>
 
-<!--jQuery-->
-<script src="js/lib/jquery-2.1.4.js"></script>
-<!--jQuery mobile-->
-<script src="js/lib/jquery.mobile-1.4.5.js"></script>
-<!--JQuery Validate-->
-<script src="js/lib/jquery.validate.js"></script>
-<!--jQuery mobile css-->
-<link rel="stylesheet" type="text/css" href="css/lib/jquery.mobile-1.4.5.css">
-<link rel="stylesheet" type="text/css" href="css/DAmystyle.css">
-
-<!--my scripts-->
-<script src="js/DAdatabase.js"></script>
-<script src="js/DAfeedbackDAL.js"></script>
-<script src="js/DAutil.js"></script>
-<script src="js/DAglobal.js"></script>
